Prevent horizontal scrolling for the App component

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@ body {
   color: var(--white) !important;
 }
 
+.App {
+  overflow-x: hidden;
+}
+
 h1,
 h2,
 h3,
